--- a/Module 11/easy.html
+++ b/Module 11/easy.html
@@ -5,10 +5,15 @@
     <title>title</title>
 </head>
 <body>
-    <p style="background-color: pink; color:white; padding:20px;" class="slider-pharagraph" >
-        kljnnklonjlnm klnmlnjmklesdghuigesjukdgkjbrkjkjr rgh  gv  hbghgyufgv 
-    </p>
-    <p class="border-solid">paragraph</p>
-    <link rel="stylesheet" href="internal.css">
+    <p style="background-color: orange; color:white; padding:30px;">CSS example</p>
+    <p class="slider-pharagraph">Test</p>
+    <style>
+        *slider-pharagraph {
+            background-color: deeppink;
+            padding: 30px;
+            color:hotpink;
+        }
+    </style>
+    <div style="background-color:gold; padding: 35px;margin-top: 30px;margin-right: 30px;"> some content </div>
 </body>
 </html>
