--- a/Module 14/challenges.html
+++ b/Module 14/challenges.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Combinators Challenge</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css"> 
 </head>
-<body>
-
-    <!-- Navigacioni -->
+<body> 
+    
     <nav>
         <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Services</li>
+            <li>Arjona</li>
+            <li>Zana</li>
+            <li>Era</li>
+            <li>Greta</li>
+            <li>Altin</li>
         </ul>
     </nav>
-
-</body>
+</body> 
 </html>
