--- a/Module 15/position.html
+++ b/Module 15/position.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8" />
-    <link ref 
-    <title>title</title>
+    <link rel="stylesheet" href="position.css">
+
+    <title>Position</title>
+
 </head>
 <body>
-    <div class="static"></div>
-    <div class="relative"></div>
-    <div class="absolute"></div>
-    <div class="sticky"></div>
-    <div class="fixed"></div>
+   
+
+    <div class="static">this div is static</div>
+    <div class="relative">this div is relative</div>
+    <div class="absolute">this div is absolute</div>
+    <div class="sticky">this div is sticky</div>
+    <div class="fixed">this div is fixed</div>
     
 </body>
 </html>
