--- a/Module 17/dropdowns.html
+++ b/Module 17/dropdowns.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8" />
     <title>Dropdown</title>
-
+<link rel="stylesheet" href="easy.css">
 </head>
+
 <body>
     <div class="Dropdown">
         <a href="#">Im arjona.  </a>
@@ -13,5 +15,23 @@
         </div>
     </div>
     <link rel="stylesheet" href="dropdowns.css"> 
+
+<h1>Counters of Programing laguages</h1>
+<h2>HTML</h2>
+<h2>CSS</h2>
+<h2>Javascript</h2>
+<h2>PHP</h2>
+<h2>AI</h2>
+
+<div class="jona"></div>
+<a href="#">hover here</a>
+<div class="dropdown-content">
+    <p>home</p>
+    <p>home</p>
+    <p class="border-solid"></p>
+    <p>home</p>
+</div>
+
+</body>
 </body>
 </html>
