--- a/Module 21/responsive.html
+++ b/Module 21/responsive.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Media Queries Example</title>
     <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
 
-    <p class="media">Lorem ipsum odor amet, consectetuer adipiscing elit. Non faucibus sapien ante nunc vel molestie aptent. Vitae tempus venenatis, eros magnis vestibulum luctus arcu leo tortor. Ad fermentum aptent scelerisque lacus in sapien nascetur nisl in. Donec ullamcorper etiam arcu nibh sem suscipit commodo sollicitudin cras. Primis hendrerit aliquam fermentum ut venenatis himenaeos massa. Quisque integer consectetur vel mauris lacus at varius. Praesent viverra hendrerit suspendisse etiam tortor donec quis phasellus. Leo nulla massa urna pretium varius imperdiet interdum proin.
+    <p class="p1">Lorem ipsum odor amet, consectetuer adipiscing elit. Non faucibus sapien ante nunc vel molestie aptent. Vitae tempus venenatis, eros magnis vestibulum luctus arcu leo tortor. Ad fermentum aptent scelerisque lacus in sapien nascetur nisl in. Donec ullamcorper etiam arcu nibh sem suscipit commodo sollicitudin cras. Primis hendrerit aliquam fermentum ut venenatis himenaeos massa. Quisque integer consectetur vel mauris lacus at varius. Praesent viverra hendrerit suspendisse etiam tortor donec quis phasellus. Leo nulla massa urna pretium varius imperdiet interdum proin.Lorem ipsum odor amet, consectetuer adipiscing elit. Non faucibus sapien ante nunc vel molestie aptent. Vitae tempus venenatis, eros magnis vestibulum luctus arcu leo tortor. Ad fermentum aptent scelerisque lacus in sapien nascetur nisl in. Donec ullamcorper etiam arcu nibh sem suscipit commodo sollicitudin cras. Primis hendrerit aliquam fermentum ut venenatis himenaeos massa. Quisque integer consectetur vel mauris lacus at varius. Praesent viverra hendrerit suspendisse etiam tortor donec quis phasellus. Leo nulla massa urna pretium varius imperdiet interdum proin.</p>
 
-    
 </body>
 </html>
