--- a/Projekt/home.html
+++ b/Projekt/home.html
@@ -21,7 +21,7 @@
         <section class="car-details">
             <div class="car-images">
                 <div class="car-image-container">
-           hij89y89u7yt          <img src="audi1.png.jpg" alt="Audi RS7 Front View" class="car-image">
+                    <img src="audi1.png.jpg" alt="Audi RS7 Front View" class="car-image">
                 </div>
                 <img src="audi2.png.jpg" alt="Audi RS7 Side View" class="car-images">
             </div>
