--- a/Projekt/home.html
+++ b/Projekt/home.html
@@ -21,7 +21,7 @@
         <section class="car-details">
             <div class="car-images">
                 <div class="car-image-container">
-           hij89y89u7yt          <img src="audi1.png.jpg" alt="Audi RS7 Front View" class="car-image">
+        <img src="audi1.png.jpg" alt="Audi RS7 Front View" class="car-image">
                 </div>
                 <img src="audi2.png.jpg" alt="Audi RS7 Side View" class="car-images">
             </div>
@@ -30,6 +30,12 @@
                 <p>The 2025 Audi RS7 Performance is a high-performance sedan with a powerful 4.0-liter twin-turbocharged V8 engine that produces 621 horsepower and 627 lb-ft of torque..</p>
                 <button class="buy-button">Buy Now</button>
             </div>
+            <div class="car image-container">
+                <img src="audi3.png" alt="Audi RS7 Side View" class="car-image">
+                <h3> Audi RS7</h3>
+                <p>Audi German luxury automobile manufacturer headquartered in Ingolstadt, Bavaria, Germany. A subsidiary of the Volkswagen Group, Audi manufactures vehicles at nine production facilities worldwide.></p>
+            </div>
+
         </section>
 
         <section class="comments">
