--- a/Projekt/home.html
+++ b/Projekt/home.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Audi</title>
+    <title>Audi RS7</title>
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
 
-   
     <section id="section">
         <div class="image-container">
             <img src="audi.jpg" alt="Audi" class="centered-image">
@@ -23,13 +22,27 @@
                 <div class="car-image-container">
                     <img src="audi1.png.jpg" alt="Audi RS7 Front View" class="car-image">
                 </div>
-                <img src="audi2.png.jpg" alt="Audi RS7 Side View" class="car-images">
+                <img src="audi3.png" alt="Audi RS7 Side View" class="car-image">
             </div>
             <div class="car-description">
                 <h2>Audi RS7</h2>
-                <p>The 2025 Audi RS7 Performance is a high-performance sedan with a powerful 4.0-liter twin-turbocharged V8 engine that produces 621 horsepower and 627 lb-ft of torque..</p>
+                <p>The 2025 Audi RS7 Performance is a high-performance sedan with a powerful 4.0-liter twin-turbocharged V8 engine that produces 621 horsepower and 627 lb-ft of torque. Its athletic exterior is complemented by sleek lines and a bold design that exudes sophistication and power. The advanced quattro all-wheel drive system ensures remarkable traction, even in challenging road conditions. Inside, the RS7 boasts a driver-focused cockpit with cutting-edge technology, including a digital display, advanced infotainment system, and luxurious finishes like leather and Alcantara upholstery. With its unparalleled combination of speed, comfort, and style, the Audi RS7 stands as a leader in the high-performance sedan category.</p>
                 <button class="buy-button">Buy Now</button>
             </div>
+        </section>
+
+        <section class="extra-images">
+            <h2>Interior & Driving Experience</h2>
+            <p>Experience the perfect fusion of luxury and technology. The Audi RS7's interior is designed with top-quality materials, featuring advanced driver-assistance systems, a futuristic dashboard with a large digital display, and an intuitive infotainment system that ensures the best driving experience. The car offers exceptional comfort, even on long trips, while delivering thrilling performance.</p>
+            <div class="additional-images">
+                <img src="audi4.png" alt="Audi RS7 Interior View" class="interior-image">
+                <img src="audi2.png.jpg" alt="Audi RS7 Driving View" class="driving-image">
+            </div>
+        </section>
+
+        <section class="video-section">
+            <h2>Watch Audi RS7 Review</h2>
+            <a href="https://www.youtube.com/watch?v=GSwH-V7eJjo" target="_blank" class="video-button">Watch Video</a>
         </section>
 
         <section class="comments">
@@ -41,5 +54,8 @@
             </form>
         </section>
     
+    </section>
+
 </body>
 </html>
+
