--- a/Module 28/style.html
+++ b/Module 28/style.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Style with css</title>
+    <title>style</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <button id="btn1">Click</button>
-<h1 id="txt1">Era ma e mira</h1>    
-<script scr="events2.js"></script>
+<h1 ID="txt1">Urime ditelindjen Era</h1>    
+<script src="style.js"></script>
 </body>
 </html>
