--- a/Module 28/style.html
+++ b/Module 28/style.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <button id="btn1">Click</button>
-<h1 ID="txt1">Urime ditelindjen Era</h1>    
+<h1 ID="txt1">Arjonaa</h1>    
 <script src="style.js"></script>
 </body>
 </html>
